Add service to get all pool initilization jobs
